<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/daily_item_date"
            android:layout_width="@dimen/layout_90dp"
            android:layout_height="match_parent"
            android:text="1970-12-12"
            android:gravity="center"/>
        <TextView
            android:layout_width="@dimen/layout_50dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/day"/>
        <TextView
            android:id="@+id/daily_item_day"
            android:layout_width="@dimen/layout_50dp"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_50dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/night"/>
        <TextView
            android:id="@+id/daily_item_night"
            android:layout_width="@dimen/layout_50dp"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/layout_50dp"
            android:layout_height="match_parent"
            android:text="@string/temperature"
            android:gravity="center"/>
        <TextView
            android:id="@+id/daily_item_temp"
            android:layout_width="@dimen/layout_70dp"
            android:layout_height="match_parent"
            android:text="60C~60C"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_50dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/wind_direction"/>
        <TextView
            android:id="@+id/daily_item_wind_dir"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_50dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/wind_speed"/>
        <TextView
            android:id="@+id/daily_item_wind_spe"
            android:layout_width="@dimen/layout_30dp"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
    </LinearLayout>

</LinearLayout>