<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/layout_60dp">
        <com.flyco.labelview.LabelView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lv_text="@string/now"/>
        <TextView
            android:id="@+id/weather_address"
            android:layout_width="@dimen/layout_70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/layout_5dp"/>
        <TextView
            android:id="@+id/weather_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/layout_5dp"/>
        <TextView
            android:id="@+id/weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/layout_5dp"/>
        <TextView
            android:id="@+id/weather_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/layout_5dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/layout_40dp">
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/washing_car"/>
        <TextView
            android:id="@+id/weather_washing_car"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/dressing"/>
        <TextView
            android:id="@+id/weather_dressing"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/flu"/>
        <TextView
            android:id="@+id/weather_flu"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/layout_40dp">
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sports"/>
        <TextView
            android:id="@+id/weather_sports"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/travel"/>
        <TextView
            android:id="@+id/weather_travel"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/uv"/>
        <TextView
            android:id="@+id/weather_uv"
            android:layout_width="@dimen/layout_0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center|left"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_1dp"
        android:background="@color/black"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/weather_recycle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0dp"
        android:layout_weight="1"/>

</LinearLayout>
